src/svelte/app.css
section {
	margin: 3em auto;
	max-width: 60em;
}

ul {
	list-style: none;
	padding: 0;
	margin: 0;
	display: flex;
	gap: 0.5em;
	flex-direction: column;
}

pre {
	white-space: pre-wrap;
	background: #333;
	color: #aaa;
	height: 10em;
	overflow: auto;
	resize: vertical;
	padding: 1em;
	box-sizing: border-box;
	margin: 0;
}

textarea {
	white-space: pre-wrap;
	background: #ffffee;
	color: #000;
	width: 100%;
	min-height: 10em;
	border: 0;
	resize: vertical;
	padding: 1em;
	box-sizing: border-box;
}

.number-picker {
	display: flex;
	align-items: center;
	flex-wrap: wrap;
	gap: 1em;
}

.number-picker-numberfield {
	width: 3em;
}

fieldset {
	margin-inline: 0;
	border: 1px solid #aaa;
	display: block;
}

input[type=range]{
    -webkit-appearance: none;
    width: 100%;
    font: inherit;

    flex-basis: 15em;
    /* fix for FF unable to apply focus style bug  */
    border: 1px solid white; 

    /*required for proper track sizing in FF*/
    width: 100%;

    background: none;
  	border: none;
}

input[type=range]::-moz-range-track {
    width: 100%;
    height: 4px;
    background: #ddd;
    border: none;
    border-radius: 3px;
    margin: 1.2em 0;
}

input[type=range]::-moz-range-thumb {
    border: none;
    border: none;
    height: 1em;
    width: 1em;
    border-radius: 50%;
    background: var(--accent-color, #dd4e40);
    margin-top: calc(-0.5em + 2px);
    border: 2px solid var(--accent-color-light, #ffe0ee);
}

input[type=range]::-moz-range-thumb:hover,
input[type=range]::-moz-range-thumb:active {
	outline: 1px solid var(--accent-color, #dd4e40);
}

/*hide the outline behind the border*/
input[type=range]:-moz-focusring{
    outline: 1px solid white;
    outline-offset: -1px;
}

input[type=range]:focus::-moz-range-track {
    background: #aaa;
}

input[type=range]::-webkit-slider-runnable-track {
    width: 100%;
    height: 4px;
    background: #ddd;
    border: none;
    border-radius: 0.25em;
    margin: 0.2em0;
}

input[type=range]::-webkit-slider-thumb {
    -webkit-appearance: none;
    border: none;
    height: 1em;
    width: 1em;
    border-radius: 50%;
    background: var(--accent-color, #dd4e40);
    margin-top: calc(-0.5em + 2px);
    border: 2px solid var(--accent-color-light, #ffe0ee);
}
input[type=range]::-webkit-slider-thumb:hover,
input[type=range]::-webkit-slider-thumb:active {
	outline: 1px solid var(--accent-color, #dd4e40);
}

input[type=range]:focus {
    outline: none;
}

input[type=range]:focus::-webkit-slider-runnable-track {
    background: #aaa;
}

input[type=range]:disabled::-moz-range-thumb, 
input[type=range]:disabled::-webkit-slider-thumb {
	background: #fff;
	border-color: #ccc;
}


input[type="text"] {
	margin: 0;
}

.phantom {
	visibility: hidden;
}

.controls {
	display: flex;
	margin: 1em 0;
}

.button, button {
	border: none;
	background: #222;
	color: #fff;
	padding: 0.3em 0.5em;
	display: inline-block;
	font: inherit;
	cursor: pointer;
}

button:hover, .button:hover {
	background: #333;
}

button:active, .button:active {
	background: #000;
}

button:focus-visible, .button:focus-visible {
	outline: 3px solid #00ccdd;
}

.simple-form {
	display: grid;
	grid-template-columns: auto auto;
	gap: 0.5em;
	justify-content: start;
}

.simple-form > label {
	display: grid;
	grid-template-columns: subgrid;
	grid-column: 1 / span 2;
}

.error-message {
	color: #aa0000;
}

.has-error {
	background: #ffeeee;
	outline: 3px solid #aa0000;
	color: #330000;
}

.beside {
	display: grid;
	grid-template-columns: repeat(auto-fit, minmax(15em, 1fr));
	grid-template-rows: 1fr;
	grid-auto-rows: 1fr;
	justify-items: stretch;
	align-items: stretch;
	gap: 0.5em;
	resize: vertical;
	min-height: 10em;
	height: 20em;
	overflow: hidden;
	padding: 2px 0.5em 0.5em 2px;
}

.beside > * {
	flex-grow: 1;
	height: 100%;
}

.beside * {
	resize: none;
}

.asciiart {
	white-space: pre;
	font-family: monospace;
	line-height: 1;
	font-size: 1em;
	padding: 0;
	line-break: strict;
	border: none;
	margin: 0;
	min-height: 130px;
	width: 100%;
	vertical-align: baseline;
	appearance: revert;
	padding: 2px;
   -webkit-overflow-scrolling: none;
	overflow-scrolling: none;
}

.asciiart::after {
	content: '\a';
}

.scrollable {
	overflow: scroll;
}

